 - [DEV-449] added display of host time in screens (Aly)
 - [DEV-449] added system.localtime[local] check (Sasha)
 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

--------------------------------------------------------------------------------
Changes for 1.8.11rc1

..F....... [ZBX-4506] removed unnecessary new line symbol stripping from HTML attributes (pavels)
.D........ [ZBX-4404] fixed incorrect max value for the MaxHousekeeperDelete option in the default zabbix_server.conf file (Sasha)
A......... [ZBX-4337] fixed possible typo in class.cusermacro.php (sanja)
....I..... [ZBX-4461] changed binary path from bin to sbin in FreeBSD initscripts (Richlv)
..F....... [ZBX-4491] updated Japanese translation; thanks to Kodai Terashima (Richlv)
..F....... [ZBX-4169] fixed filter reset after timeline change in Monitoring->latest data->History of log item (Slava)
..F....... [ZBX-3219] Translating script error to human language (Slava)
..F....... [ZBX-4457] updated French translation; thanks to Joseph Bueno (Richlv)
..F....... [ZBX-3909] fixed link to null on menu and non-hiding menu in maps (Slava)
...G...... [ZBX-4421] added individual CPU statistics on FreeBSD (Andris)
........S. [ZBX-4466] fixed inserting UNKNOWN events with incorrect 'clock' values (Sasha)
........S. [ZBX-2802] fixed handling of NodeNoHistory and NodeNoEvents parameters (Sasha)
...G...PS. [ZBX-4394] fixed handling of log rotation failure (Andris)
..F....... [ZBX-4455] fixed the 'sortorder' field validation in the IT services form (pavels)
..F....... [ZBX-4447] fixed object selection in several forms in IE6 and IE7 (pavels)
........S. [ZBX-4298] fixed a number of deleted events in a deleted data report (Sasha)

Changes for 1.8.10

1.8.10rc2 was released as 1.8.10 without any changes

Changes for 1.8.10rc2

..F....... [ZBX-2843] fixed log trigger creation menu in items list (Vedmak)

Changes for 1.8.10rc1
