@@ -325,14 +325,6 @@ DBUser=root
 # Default:
 # CacheSize=8M
 
-### Option: CacheUpdateFrequency
-#	How often Zabbix will perform update of configuration cache, in seconds.
-#
-# Mandatory: no
-# Range: 1-3600
-# Default:
-# CacheUpdateFrequency=60
-
 ### Option: StartDBSyncers
 #	Number of pre-forked instances of DB Syncers
 #
@@ -349,15 +341,6 @@ DBUser=root
 # Range: 128K-1G
 # Default:
 # HistoryCacheSize=8M
-
-### Option: TrendCacheSize
-#	Size of trend cache, in bytes.
-#	Shared memory size for storing trends data.
-#
-# Mandatory: no
-# Range: 128K-1G
-# Default:
-# TrendCacheSize=4M
 
 ### Option: HistoryTextCacheSize
 #	Size of text history cache, in bytes.
